--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+    
     <title>Grocery bud</title>
 </head>
 <body>
-    <h1>hello world!</h1>
-    <section>
+    <!-- <h1>hello world!</h1> -->
+    <section class="section-center">
         <!-- form -->
             <form class="grocery-form">
                 <p class ="alert"></p>
-                <h3>grocery budy</h3>
+                <h3>grocery buddy</h3>
                 <div class="form-control">
                     <input type="text" id="grocery" placeholder="e.g. eggs">
                     <button type="submit" class=s"subbmit-btn">submit</button>
