--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h3>grocery buddy</h3>
                 <div class="form-control">
                     <input type="text" id="grocery" placeholder="e.g. eggs">
-                    <button type="submit" class=s"subbmit-btn">submit</button>
+                    <button type="submit" class="submit-btn">submit</button>
                 </div>
             </form>
         <!-- list -->
@@ -41,6 +41,9 @@
                     <button type="button" class="clear-btn">clear items</button>     
               </div>  
     </section>
+    <!-- Javascript -->
+    <script src="index.js"></script>
 </body>
 </html>
+
 
