--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    
-    <title>Grocery bud</title>
+    <title>Grocery Bud</title>
 </head>
+
 <body>
-    <!-- <h1>hello world!</h1> -->
-    <section class="section-center">
-        <!-- form -->
-            <form class="grocery-form">
-                <p class ="alert"></p>
-                <h3>grocery buddy</h3>
-                <div class="form-control">
-                    <input type="text" id="grocery" placeholder="e.g. eggs">
-                    <button type="submit" class="submit-btn">submit</button>
+  <section class="section-center">
+    <!-- form -->
+    <form class = "grocery-form">
+        <p class="alert"></p>
+        <h3>grocery bud</h3>
+        <div class="form-control">
+            <input type="text" id="grocery" placeholder="e.g.eggs" />
+            <button type="submit" class="submit-btn">submit</button>
+        </div>
+    </form>
+    <!-- list -->
+    <div class="grocery-container">
+        <div class="grocery-list">
+            <!-- <article class="grocery-item">
+                <p class="alert">item</p>
+                <div class="btn-container">
+                    <button type="button" class="edit-btn">
+                        <i class="fa-solid fa-pen-to-square"></i>  
+                    <button type="button" class="delete-btn">
+                        <i class="fa-solid fa-trash"></i>
+                    </button>
                 </div>
-            </form>
-        <!-- list -->
-            <div class="grocery-container">
-                <div class="grocery-list">
-                    <article class="grocery-item">
-                        <p class="title">milk</p>
-                        <div class="btn-container">
-                            <button type="button" class="edit-btn">
-                                <i class="fa-regular fa-pen-to-square"></i>
-                            </button>        
-                            <button class="delete-btn">
-                                <i class="fa-regular fa-trash-can"></i>
-                            </button>
+            </article> -->
+        </div>
+        <!--  clear button -->
+        <button type="button" class="clear-btn">clear items</button>        
+    </div>
+  </section>
 
-                        </div>
-                    </article>
-                </div>  
-                <!-- clear button -->      
-                    <button type="button" class="clear-btn">clear items</button>     
-              </div>  
-    </section>
-    <!-- Javascript -->
-    <script src="index.js"></script>
+  <!--javascript  -->
+<script src="index.js"></script>
 </body>
-</html>
 
+</html>
 
